nginx/nginx-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - api.smileshosting.com
    secretName: api-smileshosting-tls
  rules:
  - host: api.smileshosting.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mydeploy
            port:
              number: 80
