nginx/nginx-ns-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "api.smileshosting.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mydeploy
            port:
              number: 80
